@@ -63,7 +63,7 @@ class TransactionListWidget : public QWidget {
 		int currentEditFromItem();
 		QSize minimumSizeHint() const;
 		QSize sizeHint() const;
-		void setFilter(QDate fromdate, QDate todate, double min = -1.0, double max = -1.0, Account *from_account = NULL, Account *to_account = NULL, QString description = QString::null, QString payee = QString::null, bool exclude = false);
+		void setFilter(QDate fromdate, QDate todate, double min = -1.0, double max = -1.0, Account *from_account = NULL, Account *to_account = NULL, QString description = QString::null, QString payee = QString::null, bool exclude = false, bool exact_match = false);
 		bool exportList(QTextStream &outf, int fileformat);
 		bool isEmpty();
 		void currentDateChanged(const QDate &olddate, const QDate &newdate);
