@@ -3,6 +3,7 @@
 	* Make sure save filename ends with ".eqz"
 	* Replace KDateEdit, KDatePicker, KLineEdit, KCompletion and KMessageBox with Qt widgets
 	* Fix "scheduled operations don't go further than next year if range is other than 'no end'"
+	* Search whole description and payer/payee when filtering and add exact match option
 
 2016-06-13  Hanna Knutsson <hanna_k@fmgirl.com>
 
